test/official_tests/method/not_found.lox
class Foo {}

Foo().unknown(); // error: {"line":3,"message":"Undefined property 'unknown' for class 'Foo'","type":"RuntimeError"}
